B/z-index-task-details/ fixed

--- a/src/assets/styles/pages/TaskDetails.scss
+++ b/src/assets/styles/pages/TaskDetails.scss
@@ -1,4 +1,5 @@
 .task-details {
+    z-index: 200;
     background-color: $primary-background-color;
     position: absolute;
     top: 0;
